fix z-index admin dashboard map

--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -21,3 +21,7 @@
     font-size: 16px !important;
     color: black !important;
 }
+
+.modal {
+    z-index: 2000 !important;
+}
